--- a/AspProjekat.DataAccess/AspProjekat.DataAccess.csproj
+++ b/AspProjekat.DataAccess/AspProjekat.DataAccess.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net" Version="0.1.0" />
     <PackageReference Include="Bogus" Version="35.5.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
